--- a/p1.html
+++ b/p1.html
@@ -1,30 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>personale portfolio</title>
-    <link rel="stylesheet" type="text/css" href="p1.css">
-</head>
-<body>
-    <div class="hero">
-        <nav>
-            <ul>
-                <li><a>HOME</a></li>
-                <li><a href="a1.html" target="_blank">Portfolio</a></li>
-                <li><a href="a2.html" target="_blank">Hire Me</a></li>
-            </ul>
-        </nav>
-        <div class="hansika">
-            <h1>I,m Hansika <span>Agrawal</span></h1>
-            <p>This is my official portfolio website to show all
-                <br>Details and work expirence in web development.
-            </p>
-            <a href="a1.html" target="_blank" download>Download CV</a>
-
-        </div>
+<html>
+  <head>
+    <title>portfolio</title>
+    <link rel="stylesheet" type="text/css" href="a1.css">
+  </head>
+  <body id="about">
+    <div>
+      <h3>
+        Name:Hansika Agrawal<br>
+        DOB:16/12/2003<br>
+        Age:19<br>
+        Born Place:kosi kalan,Mathura<br><hr>
+      </h3>
     </div>
-    
-</body>
+     <div>
+       <h1>Academic Background</h1><br>
+       Schooling:Vidya Anand Public School<br>
+       Currently pursuing:Btech CS(CCV) from GLA University.<br><hr>
+     </div> 
+    <div>
+      <h1>Expertise</h1><br>
+      Java programming(Intermediate)<br>
+      HTML,CSS,Javascript,git,Tailwind<br><hr>
+    </div>
+    <div>
+      <h1>Skills</h1><br>
+      <ul>
+        <li>
+          Attentive listening and effective<br>
+          oral communication skills.
+        </li>
+        <li>
+          Great at problem solving.
+        </li>
+        <li>
+          Ability to quickly create and <br>
+          apply ideas and solutions.
+        </li>
+        <li>
+          Good Leadership skills.
+        </li>
+        <li>
+          Critical Thinker.
+        </li>
+      </ul>
+      <hr>
+    </div>
+    <div>
+      <h1>Projects</h1><br>
+      Working on cloud based blood bank system.<hr>
+    </div>
+    <div>
+      <h1>Contact</h1><br>
+      Email:hansika268@gmail.com<br>
+      Contact no:1122334455<br>
+      <hr>
+    </div>
+    <div>
+    <a href="index.html">back</a><br>
+    <a href="p2.html">Contact</a><br>
+      </div>
+  </body>
 </html>
